@@ -1,5 +1,10 @@
 2012-01-25 Riccardo Mottola <rm@gnu.org>
 
+	* Application/UI/FSTableView+Scrolling.m
+	Warning fixes.
+
+2012-01-25 Riccardo Mottola <rm@gnu.org>
+
 	* FSCore/FSObject.m
 	* FSCore/FoundationExtentions.m
 	Change imports for gcc 4.6 support
